2002-09-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_multiattrib.nw: Redid the "Flags" column to be now
	"Vis?" and "SN".  Basically added 2 columns instead of one.

	* noweb/x_multiattrib.nw: Changed the justification of the last
	two columns to be center

	* noweb/x_mulitattrib.nw: Fixed the slot changing code to be 
	correct (use the correct column)

	* noweb/x_multiattrib.nw: After clicking Change, re-highlight the
	value entry
	
2002-09-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_multiattrib.nw: Redid multi attribute dialog box using
	glade.  Internals very similar, a few widget changes.

	* noweb/x_multiattrib.nw: Not done yet, still need to redo flags
	column in the clist (not good enough yet)

	* noweb/x_attribedit.nw: Removed a static keyword to allow function
	reuse.

2002-09-02 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_multiattrib.nw: Created new file.

	* noweb/x_dialog.nw: Moved multi attrib edit dialog box code into
	above new file.
	
2002-09-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_window.nw: Added code to allows the main window to be 
	resized to any smaller size.

2002-08-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/auto-uref.scm: Fixed left over "uref".  Pointed out/fixed
	by Antonio A Todo Bom.  Thanks.

	* lib/gschem-lightbg: Fixed the background color for images.  
	Bug pointed out by John Eaton.

	* noweb/gschem.nw: Added bug fix by Alexandre P. Nunes to get 
	the postscript output working again when you pick a locale which
	uses ","'s instead of "."'s.

2002-08-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_attribedit.nw: Fixed the focus on the value entry to be
	correct when labeling (naming) nets.

	* noweb/x_attribedit.nw: Added the key binding for the Escape key

	* noweb/x_fileselect.nw: Added the key binding for the Escape key

	* src/Makefile.am: Remove x_attrsel.nw (obsolete file)

	* lib/system-gschemrc.in: Added setpagedevice-* keywords
