@@ -22,4 +22,5 @@ tgz: dvi ps pdf html
 
 clean:
 	rm -f $(docname).aux $(docname).dvi $(docname).log \
-	      $(docname).pdf $(docname).ps *~ $(docname).toc $(docname).tgz
+	      $(docname).pdf $(docname).ps *~ $(docname).toc $(docname).tgz 
+	rm -rf $(docname)
