@@ -88,6 +88,8 @@ void (*text_draw_func)()     = o_text_draw;
 void (*pin_draw_func)()      = o_pin_draw;
 void (*select_func)()        = o_select_object; /* NEW SELECTION code */
 void (*x_log_update_func)()  = x_log_update;
+void (*quit_func)()          = NULL;  /* not used by gschem */
+void (*variable_set_func)()  = NULL;  /* not used by gschem */
 
 /* command line options */
 int quiet_mode = FALSE;
