@@ -1,3 +1,8 @@
+2002-09-16 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* noweb/globals.c: Added variable_set_func and quit_func.  These
+	are not used by gschem.
+	
 2002-09-07 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* noweb/x_multiattrib.nw: Redid the "Flags" column to be now
